examples-generated/network/v1alpha1/route.yaml
apiVersion: network.hcloud.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: network/v1alpha1/route
  labels:
    testing.upbound.io/example-name: privNet
  name: privnet
spec:
  forProvider:
    destination: 10.100.1.0/24
    gateway: 10.0.1.1
    networkIdSelector:
      matchLabels:
        testing.upbound.io/example-name: mynet
